--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -20,7 +20,7 @@ steps:
 - script: |
     python -m venv venv  # create virtual environment
     source venv/bin/activate  # activate virtual environment
-    pip install -r Vatsal/requirements.txt  # install dependencies from the Vatsal folder
+    pip install -r requirements.txt  # install dependencies from the Vatsal folder
   displayName: 'Install dependencies'
 
 # run Python tests
