--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,29 +1,46 @@
 trigger:
   branches:
     include:
-      - Vatsal  # trigger pipeline when changes are pushed to Vatsal branch
+      - refs/heads/Vatsal  # Explicitly include the branch with full reference
+
 
 pool:
   vmImage: 'ubuntu-latest'  # using the latest Ubuntu image for the pipeline
 
 steps:
-# checkout the code from the repository
+# Checkout the code from the repository
 - task: Checkout@1
+  inputs:
+    repository: $(Build.Repository.Name)  # Ensure it’s the correct repository
+    clean: true  # Clean the working directory before checkout
+    ref: refs/heads/Vatsal  # Explicitly checkout the Vatsal branch
 
-# set up Python environment 
+# Debugging step to print environment variables and working directory
+- script: |
+    echo "## Listing all pipeline variables"
+    printenv  # List environment variables
+    echo "## List Azure DevOps variables"
+    echo $(Build.SourceBranch)  # Print branch name
+    echo $(Build.Repository.Name)  # Print repository name
+    echo $(System.DefaultWorkingDirectory)  # Print default working directory
+  displayName: 'Debug Variables'
+
+# Set up Python environment
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.x'  # specify Python version, e.g., 3.x
     addToPath: true
 
+# Install dependencies using pip
 # install dependencies using pip
 - script: |
-    python -m venv venv  # create virtual environment
-    source venv/bin/activate  # activate virtual environment
-    pip install -r requirements.txt  # install dependencies from requirements.txt
+    python -m venv venv  # Create virtual environment
+    source venv/bin/activate  # Activate virtual environment
+    pip install -r ./requirements.txt  # Install dependencies from the current folder
   displayName: 'Install dependencies'
 
-# run Python tests
+
+# Run Python tests
 - script: |
     source venv/bin/activate  # activate virtual environment
     python -m unittest discover  # run tests
