--- a/MVP/.env
+++ b/MVP/.env
@@ -1,3 +1,3 @@
 GROQ_API_KEY = "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"
-meteostat_key= "a2c07afd70msha02f183d0612af5p1625d4jsn5bc4859327c1"
-GITHUB_TOKEN = "your_github_token"
+meteostat_key= "2aa6ba6252msha6244eacea23b2ap11a1fbjsn63d80c3e8b32"
+GITHUB_TOKEN = "your github token"
